SearchService 수정